--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "firebase": "^12.8.0",
     "framer-motion": "^12.29.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
     "monaco-editor": "^0.55.1",
     "react": "^19.2.0",
