--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.39.0",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "firebase": "^12.8.0",
