--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 ﻿{
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/.*",
+      "dest": "/index.html"
     }
   ]
 }
