--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^12.8.0",
     "framer-motion": "^12.29.0",
+    "groq-sdk": "^0.37.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
     "monaco-editor": "^0.55.1",
